<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.xll.xinsheng.model.LoanPayModel" />

        <variable
            name="submitListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="openFileListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="submitFileListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="attachmentAdapter"
            type="com.xll.xinsheng.adapter.AttachmentItemAdapter" />

        <variable
            name="backListener"
            type="android.view.View.OnClickListener" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60"
                android:background="@color/blue_dark">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dimen_15"
                    android:onClick="@{backListener}"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/loan_pay_request"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dimen_15"
                    android:onClick="@{submitListener}"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15" />

            </RelativeLayout>

            <com.xll.xinsheng.myview.CompoVerSpinner
                android:id="@+id/request_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@{model.projectEntries}"
                app:title="@string/request_project" />

            <com.xll.xinsheng.myview.CompoVerSpinner
                android:id="@+id/request_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_10"
                app:entries="@{model.requestEntries}"
                app:title="@string/request_type" />

            <com.xll.xinsheng.myview.CompoVerSpinner
                android:id="@+id/process_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_10"
                app:entries="@{model.processEntries}"
                android:descendantFocusability="blocksDescendants"
                android:focusable="false"
                app:title="@string/process_type" />

            <com.xll.xinsheng.myview.CompoVerTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:textName="@string/request_ticket_id"
                android:paddingTop="@dimen/dimen_10"
                app:textValue="@{model.ticketId}"
                />

            <com.xll.xinsheng.myview.CompoVerSpinner
                android:id="@+id/bank_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_10"
                app:entries="@{model.bankEntries}"
                app:title="@string/bank_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/attachment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableEnd="@drawable/add_blue"
                    android:onClick="@{openFileListener}"
                    android:padding="@dimen/dimen_10"
                    android:text="@string/attachment"
                    android:textSize="@dimen/text_size_15" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_money_detail"
                    app:adapter="@{attachmentAdapter}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>

            <com.xll.xinsheng.myview.CompoEditView
                android:id="@+id/request_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@android:color/white"
                android:inputType="numberDecimal"
                app:editPrompt="@string/request_money"
                app:editValue="@{model.requestMoney}" />


            <com.xll.xinsheng.myview.CompoEditView
                android:id="@+id/bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:editPrompt="@string/bank_name"
                app:editValue="@{model.bankName}" />

            <com.xll.xinsheng.myview.CompoEditView
                android:id="@+id/bank_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:editPrompt="@string/bank_account"
                app:editValue="@{model.bankAccount}" />

            <com.xll.xinsheng.myview.CompoEditView
                android:id="@+id/bank_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:editPrompt="@string/bank_net_point"
                app:editValue="@{model.bankNetwork}" />

            <com.xll.xinsheng.myview.CompoVerEditView
                android:id="@+id/request_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_10"
                app:editBackground="@drawable/shape_trangle"
                app:editLine="6"
                app:editPrompt="@string/request_reason"
                app:editValue="@{model.requestReason}" />

        </LinearLayout>
    </ScrollView>
</layout>
