<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.xll.xinsheng.model.SpecialRequestModel" />

        <variable
            name="attachmentAdapter"
            type="com.xll.xinsheng.adapter.AttachmentItemAdapter" />

        <variable
            name="addListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="submitListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="openFileListener"
            type="android.view.View.OnClickListener" />


        <variable
            name="backListener"
            type="android.view.View.OnClickListener" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.xll.xinsheng.ui.SpecialCreateActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey_alpha"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60"
                android:background="@color/blue_dark">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dimen_15"
                    android:onClick="@{backListener}"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/specialProcessCreate"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dimen_15"
                    android:onClick="@{submitListener}"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15" />

            </RelativeLayout>

            <com.xll.xinsheng.myview.CompoVerSpinner
                android:id="@+id/project_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@{model.projectEntries}"
                app:title="@string/reimbursement_project" />

            <com.xll.xinsheng.myview.CompoVerSpinner
                android:id="@+id/request_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_10"
                app:entries="@{model.requestEntries}"
                app:title="@string/request_type" />

            <com.xll.xinsheng.myview.CompoVerTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:textName="@string/request_ticket_id"
                android:layout_marginTop="@dimen/dimen_10"
                app:textValue="@{model.ticketId}"
                />

            <com.xll.xinsheng.myview.CompoVerEditView
                android:id="@+id/special_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                app:editBackground="@drawable/shape_trangle"
                app:editPrompt="@string/request_fee"
                app:editValue="@{model.specialFee}" />

            <com.xll.xinsheng.myview.CompoVerEditView
                android:id="@+id/special_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                app:editBackground="@drawable/shape_trangle"
                app:editLine="6"
                app:editPrompt="@string/reimburse_reason"
                app:editValue="@{model.reimburseReason}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/attachment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableEnd="@drawable/add_blue"
                    android:onClick="@{openFileListener}"
                    android:padding="@dimen/dimen_10"
                    android:text="@string/attachment"
                    android:textSize="@dimen/text_size_15" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_money_detail"
                    app:adapter="@{attachmentAdapter}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</layout>